samples/_failures_safe/1761044080_2e3d45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58fde7ca.c: In function ‘tokenize’:
./samples/SAFE/__tmp_58fde7ca.c:157:27: error: expected ‘]’ at end of input
  157 |         tokens[token_count
      |                           ^
      |                           ]
./samples/SAFE/__tmp_58fde7ca.c:157:9: error: expected declaration or statement at end of input
  157 |         tokens[token_count
      |         ^~~~~~
./samples/SAFE/__tmp_58fde7ca.c:157:9: error: expected declaration or statement at end of input
